@@ -25,6 +25,7 @@ import java.io.UncheckedIOException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
@@ -33,7 +34,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
@@ -41,7 +41,6 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.Executor;
-import java.util.concurrent.ForkJoinPool;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -49,7 +48,6 @@ import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -62,6 +60,7 @@ import com.vaadin.base.devserver.stats.StatisticsStorage;
 import com.vaadin.base.devserver.viteproxy.ViteWebsocketEndpoint;
 import com.vaadin.experimental.FeatureFlags;
 import com.vaadin.flow.di.Lookup;
+import com.vaadin.flow.di.ResourceProvider;
 import com.vaadin.flow.internal.DevModeHandler;
 import com.vaadin.flow.server.Constants;
 import com.vaadin.flow.server.ExecutionFailedException;
@@ -245,8 +244,10 @@ public class DevModeInitializer implements Serializable {
             options.createMissingPackageJson(true);
         }
 
-        Set<File> frontendLocations = getFrontendLocationsFromClassloader(
-                DevModeStartupListener.class.getClassLoader());
+        ResourceProvider resourceProvider = lookup
+                .lookup(ResourceProvider.class);
+        Set<File> frontendLocations = getFrontendLocationsFromResourceProvider(
+                resourceProvider);
 
         boolean useByteCodeScanner = config.getBooleanProperty(
                 SERVLET_PARAMETER_DEVMODE_OPTIMIZE_BUNDLE,
@@ -359,15 +360,17 @@ public class DevModeInitializer implements Serializable {
      * META-INF/resources/frontend and META-INF/resources/themes folder. We
      * don't use URLClassLoader because will fail in Java 9+
      */
-    static Set<File> getFrontendLocationsFromClassloader(
-            ClassLoader classLoader) throws VaadinInitializerException {
+    static Set<File> getFrontendLocationsFromResourceProvider(
+            ResourceProvider resourceProvider)
+            throws VaadinInitializerException {
         Set<File> frontendFiles = new HashSet<>();
-        frontendFiles.addAll(getFrontendLocationsFromClassloader(classLoader,
-                Constants.RESOURCES_FRONTEND_DEFAULT));
-        frontendFiles.addAll(getFrontendLocationsFromClassloader(classLoader,
-                Constants.COMPATIBILITY_RESOURCES_FRONTEND_DEFAULT));
-        frontendFiles.addAll(getFrontendLocationsFromClassloader(classLoader,
-                Constants.RESOURCES_THEME_JAR_DEFAULT));
+        frontendFiles.addAll(getFrontendLocationsFromResourceProvider(
+                resourceProvider, Constants.RESOURCES_FRONTEND_DEFAULT));
+        frontendFiles.addAll(
+                getFrontendLocationsFromResourceProvider(resourceProvider,
+                        Constants.COMPATIBILITY_RESOURCES_FRONTEND_DEFAULT));
+        frontendFiles.addAll(getFrontendLocationsFromResourceProvider(
+                resourceProvider, Constants.RESOURCES_THEME_JAR_DEFAULT));
         return frontendFiles;
     }
 
@@ -382,22 +385,22 @@ public class DevModeInitializer implements Serializable {
         }
     }
 
-    private static Set<File> getFrontendLocationsFromClassloader(
-            ClassLoader classLoader, String resourcesFolder)
+    private static Set<File> getFrontendLocationsFromResourceProvider(
+            ResourceProvider resourceProvider, String resourcesFolder)
             throws VaadinInitializerException {
         Set<File> frontendFiles = new HashSet<>();
         try {
-            Enumeration<URL> en = classLoader.getResources(resourcesFolder);
+            List<URL> en = resourceProvider
+                    .getApplicationResources(resourcesFolder);
             if (en == null) {
                 return frontendFiles;
             }
             Set<String> vfsJars = new HashSet<>();
-            while (en.hasMoreElements()) {
-                URL url = en.nextElement();
+            for (URL url : en) {
                 String urlString = url.toString();
 
                 String path = URLDecoder.decode(url.getPath(),
-                        StandardCharsets.UTF_8.name());
+                        StandardCharsets.UTF_8);
                 Matcher jarMatcher = JAR_FILE_REGEX.matcher(path);
                 Matcher zipProtocolJarMatcher = ZIP_PROTOCOL_JAR_FILE_REGEX
                         .matcher(path);
@@ -411,12 +414,14 @@ public class DevModeInitializer implements Serializable {
                 if (jarVfsMatcher.find()) {
                     String vfsJar = jarVfsMatcher.group(1);
                     if (vfsJars.add(vfsJar)) { // NOSONAR
-                        frontendFiles.add(
-                                getPhysicalFileOfJBossVfsJar(new URL(vfsJar)));
+                        frontendFiles.add(getPhysicalFileOfJBossVfsJar(
+                                URI.create(vfsJar).toURL()));
                     }
                 } else if (dirVfsMatcher.find()) {
-                    URL vfsDirUrl = new URL(urlString.substring(0,
-                            urlString.lastIndexOf(resourcesFolder)));
+                    URL vfsDirUrl = URI
+                            .create(urlString.substring(0,
+                                    urlString.lastIndexOf(resourcesFolder)))
+                            .toURL();
                     frontendFiles
                             .add(getPhysicalFileOfJBossVfsDirectory(vfsDirUrl));
                 } else if (jarMatcher.find()) {
@@ -448,7 +453,7 @@ public class DevModeInitializer implements Serializable {
             throws IOException, VaadinInitializerException {
         try {
             Object virtualFile = url.openConnection().getContent();
-            Class virtualFileClass = virtualFile.getClass();
+            Class<?> virtualFileClass = virtualFile.getClass();
 
             // Reflection as we cannot afford a dependency to
             // WildFly or JBoss
@@ -464,7 +469,7 @@ public class DevModeInitializer implements Serializable {
             // are created. Later, these physical files are scanned
             // to collect
             // their resources.
-            List virtualFiles = (List) getChildrenRecursivelyMethod
+            List<?> virtualFiles = (List<?>) getChildrenRecursivelyMethod
                     .invoke(virtualFile);
             File rootDirectory = (File) getPhysicalFileMethod
                     .invoke(virtualFile);
@@ -511,7 +516,7 @@ public class DevModeInitializer implements Serializable {
         // We should use reflection to use JBoss VFS API as we cannot
         // afford a
         // dependency to WildFly or JBoss
-        Class virtualFileClass = jarVirtualFile.getClass();
+        Class<?> virtualFileClass = jarVirtualFile.getClass();
         Method getChildrenRecursivelyMethod = virtualFileClass
                 .getMethod("getChildrenRecursively");
         Method openStreamMethod = virtualFileClass.getMethod("openStream");
@@ -519,7 +524,7 @@ public class DevModeInitializer implements Serializable {
         Method getPathNameRelativeToMethod = virtualFileClass
                 .getMethod("getPathNameRelativeTo", virtualFileClass);
 
-        List jarVirtualChildren = (List) getChildrenRecursivelyMethod
+        List<?> jarVirtualChildren = (List<?>) getChildrenRecursivelyMethod
                 .invoke(jarVirtualFile);
         try (ZipOutputStream zipOutputStream = new ZipOutputStream(
                 Files.newOutputStream(tempJar))) {
@@ -529,12 +534,13 @@ public class DevModeInitializer implements Serializable {
 
                 String relativePath = (String) getPathNameRelativeToMethod
                         .invoke(child, jarVirtualFile);
-                InputStream inputStream = (InputStream) openStreamMethod
-                        .invoke(child);
-                ZipEntry zipEntry = new ZipEntry(relativePath);
-                zipOutputStream.putNextEntry(zipEntry);
-                IOUtils.copy(inputStream, zipOutputStream);
-                zipOutputStream.closeEntry();
+                try (InputStream inputStream = (InputStream) openStreamMethod
+                        .invoke(child)) {
+                    ZipEntry zipEntry = new ZipEntry(relativePath);
+                    zipOutputStream.putNextEntry(zipEntry);
+                    inputStream.transferTo(zipOutputStream);
+                    zipOutputStream.closeEntry();
+                }
             }
         }
     }
